# NMR-EsPy

./: .coveragerc  .gitignore  CHANGELOG.rst  CITATION.cff  LICENSE  LICENSE.txt  MANIFEST.in  README-pypi.rst  README.rst  TODO.md  build_venv.sh  contributors.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  theory_overview.html  venv_requirements.txt  walkthrough.html
.github/workflows/: build.yml  publish-docs.yml  publish-pypi.yml  tests.yml
_downloads/2279f0a8714ca81ac1f5156848131e06/: tutorial_1d.tex
_downloads/c5b11b59a56bad04a6ef9b05dba3ae83/: tutorial_1d.pkl
_modules/: index.html
_modules/nmrespy/: _errors.html  _misc.html  core.html  expinfo.html  (+7 more)
_sources/: index.rst.txt  install.rst.txt
_static/: bizstyle.js
content/: contributors.html  index.html  install.html  theory_overview.html  walkthrough.html
docs/: builddocs.sh  conf.py  config_mplrc.sh  contributors.rst  estimator.pkl  examples.rst  hidden_modules.rst  index.rst  install.rst  jres_walkthrough.rst  jres_walkthrough_script.py  latex_fudge.py  latex_tweaks.py  makedocs.sh  mplrc_template  publications.rst  requirements.txt  theory_overview.rst  topspin_gui.rst  user_modules.rst  walkthrough.rst
examples/: .flake8  README.md  README.rst  ex1.py  matplotlibrc  stylesheet.mplstyle
gui/: index.html  topspin_install.html
html/: .buildinfo  contributors.html  genindex.html  py-modindex.html  search.html  searchindex.js  theory_overview.html
misc/: figure_customisation.html  index.html
nmrespy/: __init__.py  __main__.py  _colors.py  _cols.py  _docstrings.py  _errors.py  _files.py  _filter.py  _freqconverter.py  _install_to_topspin.py  _misc.py  _mpm.py  _nlp.py  _paths_and_links.py  _plot.py  _result.py  _result_fetcher.py  _timing.py  _ve.py  _version.py  _write.py  contour_app.py  core.py  core.py.bak  expinfo.py  fid.py  filter.py  freqfilter.py  install_topspin.py  load.py  mpm.py  plot.py  sig.py  signal.py  write.py
references/: common_args.html  core.html  errors.html  estimator1d.html  estimator2dj.html  freqfilter.html  index.html  load.html  misc.html  mpm.html  sig.html
scripts/: nmrespy-cp-to-venv  nmrespy-rm-and-cp-to-venv
tests/: NMREsPyBruker.pkl  conftest.py  context.py  hello_there.aux  jres_estimator.pkl  nmrespy_result.txt  result.tex  result.txt  shifts_1d_pdata_hz.pkl  super_gaussian.py  test_bbqchili.py  test_bruker.py  test_estimator.py  test_expinfo.py  test_filter.py  test_frequency_converter.py  test_init.py  test_jres.py  test_load.py  test_misc.py  test_mpm.py  test_nlp.py  test_onedim.py  test_plot.py  test_result_fetcher.py  test_sanity.py  test_sig.py  test_write.py  tp_1d_pdata.pkl  utils.py
walkthroughs/: estimator1d.html  estimator2dj.html  index.html
(+671 files in other folders)
