[metadata]
name = nmrespy
version = 1.2
description = NMR-EsPy: Nuclear Magnetic Resonance Estimation in Python
author= Simon G. Hulse, Mohammadali Foroozandeh
author_email = simon.hulse@chem.ox.ac.uk
url = https://github.com/foroozandehgroup/NMR-EsPy
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
platform = any
keywords = Estimation, NMR, Signal processing
classifiers =
    Programming Language :: Python :: 3.7,
    Programming Language :: Python :: 3.8,
    Programming Language :: Python :: 3.9,
    Programming Language :: Python :: 3.10,
    License :: OSI Approved :: MIT License,
    Operating System :: OS Independent,
    Topic :: Scientific/Engineering,

[options]
packages=find:
install_requires =
    matplotlib
    numpy
    scipy
    bruker_utils
    nmr_sims
python_requires = >=3.7
include_package_data = true

[options.packages.find]
where=.

[flake8]
ignore = E203,E731,E741,W504
per-file-ignores =
    nmrespy/__init__.py: F401  # Unused import
max-line-length = 88
exclude = .git,__pychache__,build,dist
